--- a/src/css/style.css
+++ b/src/css/style.css
@@ -225,15 +225,60 @@ header #profil{
  @media only screen and (max-width: 600px) {
     html {
         background-color: ghostwhite;
+        margin: 20px;
     }
 
+    #main #left #illustration {
+        margin-bottom: 50px;
+    }
+
+    #main #left #illustration #details a{
+        color: rgb(255, 140, 0);
+    }
+
+    #main #left #illustration #threeDots {
+        display: flex;
+        margin-top: 10px;
+        border-radius: 5px;
+        background-color: rgb(207, 205, 205);
+        height: 50px;
+        width: 50px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #main #left #illustration #threeDots div {
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background-color: black;
+        margin: 2px;
+    }
+    
     #main #left .left_cards {
         display: flex;
+        justify-content: center;
+    }
+
+    #main #left .left_cards .left_card {
+        margin-right: 50px;
+        margin-bottom: 100px;
+        margin-top: 100px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
     }
 
     #main #left .left_cards .left_card .left_icon {
         height: 50px;
         width: 50px;
+        margin-bottom: 10px;
+    }
+
+    #main #left .left_cards .left_card a{
+        text-decoration: none;
+        margin: 0;
+        color: darkorange;
     }
 
     #main #right .right_cards .right_card .right_icon{
@@ -241,13 +286,50 @@ header #profil{
         width: 50px;
     }
 
+
+
     #main #right .right_cards .right_card{
         display: flex;
     }
 
+    #main #right .right_cards .right_card .threeimg{
+        margin-left: 200px;
+    }
+
+    #main #right .right_cards .right_card .description{
+        margin-left: 50px;
+    }
+
     #main #right .right_cards .right_card .threeimg img{
+        border: 2px solid ghostwhite;
+        margin-left: -30px;
         border-radius: 50%;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
+    }
+
+    #main #right .right_cards .right_card .dots {
+        justify-content: center;
+        align-items: center;
+        margin-left: 10px;
+        margin-top: 15px;
+    }
+
+    #main #right .right_cards .right_card .dots div {
+        height: 5px;
+        width: 5px;
+        background-color: gray;
+        margin-bottom: 2px;
+        border-radius: 50%;
+    }
+
+    #right .foot p{
+        color: gray;
+    }
+
+    #right .foot .icons img{
+        height: 20px;
+        width: 20px;
+        margin-right: 20px;
     }
  }
