--- a/src/css/style.css
+++ b/src/css/style.css
@@ -222,6 +222,7 @@ header #profil{
 
  } 
 
+ /* for mobile devices*/
  @media only screen and (max-width: 600px) {
     html {
         background-color: ghostwhite;
