--- a/src/css/style.css
+++ b/src/css/style.css
@@ -215,6 +215,7 @@ header #profil {
 
 #right .right_cards .right_card {
     display: flex;
+    width: 100%;
 }
 
 #right .right_cards .right_card .threeimg {
@@ -239,6 +240,7 @@ header #profil {
     margin-left: 10px;
     margin-top: 15px;
 }
+
 
 #right .right_cards .right_card .dots div {
     height: 5px;
@@ -267,30 +269,41 @@ header #profil {
 }
 
 #main #left #illustration #threeDots {
-    display: flex;
-    margin-top: 10px;
     border-radius: 5px;
-    background-color: rgb(207, 205, 205);
+    margin-top: 73px;
+    /*background-color: rgb(207, 205, 205);*/
     height: 50px;
     width: 50px;
     align-items: center;
     justify-content: center;
 }
 
-#main #left #illustration #threeDots div {
+#main #left #illustration #threeDots .d1 {
+    width: 5px;
+    height: 20px;
+    border-radius: 10px;
+    background-color: rgb(32, 107, 219);
+    margin: 2px;
+}
+
+#main #left #illustration #threeDots .d2 {
     width: 5px;
     height: 5px;
     border-radius: 50%;
-    background-color: black;
+    background-color:  rgb(32, 107, 219);
     margin: 2px;
+    margin-top: 8px;
 }
 
 #left .left_cards{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 #left .left_cards .left_card {
+    width: 150px;
+    height: 200px;
     margin-right: 50px;
     margin-bottom: 100px;
     display: flex;
@@ -298,6 +311,7 @@ header #profil {
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    box-shadow: 3px 3px 10px gray;
 }
 
 #left .left_cards .left_card .left_icon {
