--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,20 +6,34 @@
     color: var(--darkViolet);
 }
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     border: none;
 }
 
-html, body{
+html {
+    overflow: hidden;
+}
+
+html,
+body {
     margin: 0;
     padding: 0;
-    
+
     width: 100%;
     height: 100lvh;
+}
+
+body {
     overflow: hidden auto;
+    position: relative;
+}
+
+#landing-container {
+    width: 100%;
+    height: max-content;
 }
 
 .bold {
@@ -186,9 +200,10 @@ header #profil {
 #left,
 #right {
     padding: 10px;
+    height: min-content;
 }
 
-#right{
+#right {
     padding-bottom: 0;
 }
 
@@ -251,6 +266,7 @@ header #profil {
 #left #details {
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
 #left #illustration #details a {
@@ -304,6 +320,7 @@ header #profil {
     padding: 5px 15px;
     width: 30%;
     min-width: 150px;
+    max-width: 160px;
     height: 200px;
     border-radius: 5px;
 
@@ -321,7 +338,7 @@ header #profil {
     box-shadow: 2px 2px 6px rgba(102, 51, 153, 0.671)
 }
 
-.left_card{
+.left_card {
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -433,7 +450,7 @@ footer {
     color: white;
 }
 
-footer #mobilWave{
+footer #mobilWave {
     z-index: -1;
 
     position: absolute;
@@ -462,10 +479,6 @@ footer .icons img {
 
 /* Small devices (portrait tablets and large phones, 550px and up) */
 @media only screen and (min-width: 550px) {
-    body {
-        background-position-y: 65vh;
-    }
-
     #minifiedProfil .name {
         display: inline;
     }
@@ -550,11 +563,11 @@ footer .icons img {
         width: 50%;
     }
 
-    footer #mobilWave{
+    footer #mobilWave {
         display: none;
     }
 
-    body {
+    #landing-container {
         background-repeat: no-repeat;
         background-image: url(../image/waveback.svg);
         background-size: cover;
@@ -565,20 +578,25 @@ footer .icons img {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+
     html,
     body {
         height: 100%;
-        min-height: 100%;
+        min-height: min-content !important;
         position: relative;
     }
 
-    body {
-        background-position-y: 65vh;
+    #landing-container {
         background-repeat: no-repeat;
         background-image: url(../image/Wave.svg);
         background-size: contain;
         background-position-y: 0;
         background-position-x: 50%;
+    }
+
+    #main {
+        padding-right: 30px;
+        margin: auto;
     }
 
     .transpWhite {
@@ -591,10 +609,7 @@ footer .icons img {
 
     #right {
         position: relative;
-        bottom: 120px;
-        right: 4%;
-
-        /* margin-top: -120px; */
+        margin-top: -120px;
     }
 
     #onlyOnLargeProfil {
@@ -653,7 +668,10 @@ footer .icons img {
 
     .left_card {
         width: 30%;
-        max-width: 160px;
+    }
+
+    #right {
+        gap: 50px;
     }
 
     footer {
@@ -670,7 +688,38 @@ footer .icons img {
         align-self: flex-end;
     }
 
-    footer #mobilWave{
+    footer #mobilWave {
         display: none;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    body{
+        background-repeat: no-repeat;
+        background-image: url(../image/Wave.svg);
+        background-size: contain;
+        background-position-y: 0;
+        background-position-x: 50%;
+    }
+
+    #landing-container {
+        padding: 40px 20px;
+
+        background: none;
+        max-width: 1440px;
+        border-radius: 15px;
+        box-shadow: 13px 13px 28px 5px #30109965;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        -webkit-border-radius: 15px;
+        -moz-border-radius: 15px;
+        -ms-border-radius: 15px;
+        -o-border-radius: 15px;
     }
 }
